Adds capistrano for deployments Upgrade to Ruby 2.2.3

--- a/config/application.example.yml
+++ b/config/application.example.yml
@@ -3,3 +3,8 @@
 ADMIN_EMAIL: you@yourdomain.com
 ADMIN_PASS:  yoursecretpassword
 
+CAP_DEPLOY_TO: /var/www/gif_app
+CAP_SERVER: example.com
+CAP_USER: deploy
+CAP_CHRUBY: ruby-2.1.2
+
